<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/outer_layout"
    xmlns:tools="http://schemas.android.com/tools">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="24dp"
        tools:text="@string/question_1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/middle_horizontal_layout">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/button_layout">

            <Button
                android:id="@+id/answer_0_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1_answer1"
                style="?android:buttonStyle"/>

            <Button
                android:id="@+id/answer_1_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1_answer2"
                style="?android:buttonStyle"/>

            <Button
                android:id="@+id/answer_2_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_answer3"
                style="?android:buttonStyle"/>

            <Button
                android:id="@+id/answer_3_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1_answer4"
                style="?android:buttonStyle"/>


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/hint_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_button"
            style="?android:buttonStyle"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            style="?android:buttonStyle"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>




</LinearLayout>